--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -23,7 +23,7 @@
     }
 
     .header nav {
-        grid-column: 4/6;
+        grid-column: 3/6;
         grid-row: 1;
     }
     .header li {
@@ -42,7 +42,8 @@
 
     #navigation {
         display: flex;
-        margin-left: 2vw;
+        flex-wrap: wrap;
+        margin-left: 1vw;
     
     }
     .header nav ul li a {
